# minver-rs

./: AGENTS.md  CONTRIBUTING.md  README.md  action.yml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  version.rs
docs/: research-report.md
