[package]
name = "minver-rs-cli"
version = "0.1.0"
edition = "2021"
authors = ["minver-rs Contributors"]
license = "Apache-2.0"
description = "Command-line tool for minimalistic versioning using Git tags"
repository = "https://github.com/scratchingmonkey/minver-rs"
readme = "../../README.md"
keywords = ["versioning", "semver", "git", "cli", "minver"]
rust-version = "1.75"
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "minver"
path = "src/main.rs"

[dependencies]
# Core library
minver-rs = { path = "../core", version = "0.1.0" }

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
log = "0.4"

# Utilities
once_cell = "1.19"
regex = "1.10"

shadow-rs = "1"

[build-dependencies]
minver-rs = { path = "../core", version = "0.1.0" }
shadow-rs = "1"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
